<resources>
    <string name="app_name">Notepad</string>
    <string name="hint_title">Type title ...</string>
    <string name="hint_body">Type body ...</string>
    <string name="button_save">Save</string>
    <string name="empty_not_saved">Note not saved because title is empty.</string>
    <string name="add_note">Add note</string>
    <string name="menu_delete">Delete Note</string>
    <string name="menu_edit">Edit Note</string>
    <string name="title">Title</string>
    <string name="body">Body</string>

    <!--Estos son los que usaremos en cammping -->
    <string name="nombre_parcela">Nombre de la parcela: </string>
    <string name="precio_persona">Precio por persona/noche</string>
    <string name="numero_ocupantes">Número de ocupantes</string>
    <string name="button_aceptar">ACEPTAR</string>
    <string name="crear_parcela">Crear Parcela</string>
    <string name="listar_parcelas">Listar Parcelas</string>
    <string name="modificar_parcela">Modificar Parcela</string>
    <string name="eliminar_parcela">Eliminar Parcela</string>
    <string name="crear_reserva">Crear Reserva</string>
    <string name="listar_reservas">Listar Reservas</string>
    <string name="modificar_reserva">Modificar Reserva</string>
    <string name="eliminar_reserva">Eliminar Reserva</string>
    <string name="button_modificar_reserva"></string>

</resources>